fixing create order flow at checkout shippinh method

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -5,6 +5,7 @@ services:
     build:
       context: .
       dockerfile: ./docker/vue-storefront/dev/Dockerfile
+    env_file: docker/vue-storefront/dev/default.env
     volumes:
       - .:/var/www
       - /var/www/node_modules
