modifying API to import JWT token from secret

--- a/kube/vue-storefront-deployment.yaml
+++ b/kube/vue-storefront-deployment.yaml
@@ -41,6 +41,8 @@ spec:
         envFrom:
         - configMapRef:
             name: vue-storefront-config
+        - configMapRef:
+            name: vsf-secrets
         ports:
         - containerPort: 3000
         volumeMounts:
