--- a/package.json
+++ b/package.json
@@ -90,6 +90,8 @@
     "reflect-metadata": "^0.1.12",
     "register-service-worker": "^1.5.2",
     "ts-node": "^7.0.1",
+    "csv-parser": "^2.3.2",
+    "csv-writer": "^1.6.0",
     "vue": "^2.6.6",
     "jsonwebtoken": "^8.5.1",
     "axios": "^0.19.0",
