switchign to new NFS server

--- a/kube/vue-storefront-deployment.yaml
+++ b/kube/vue-storefront-deployment.yaml
@@ -72,4 +72,4 @@ spec:
             medium: Memory
         - name: nfs-drive
           persistentVolumeClaim:
-            claimName: nfs-drive-pvc
+            claimName: nfs-drive-pvc2
